--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
       url: "https://git.technolda.com/Technolda/tnd_pkg_repository.git"
       ref: v2
 
+  persistent_bottom_nav_bar : any
   hive: 2.0.4
   hive_flutter: 1.1.0
   cupertino_icons: ^1.0.2
