--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.2 <3.0.0"
+  sdk: ">=2.17.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,6 +27,7 @@ dependencies:
   persistent_bottom_nav_bar : any
   hive: 2.0.4
   hive_flutter: 1.1.0
+  path_provider: 2.0.3
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -37,3 +38,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    # - assets/icons/
+    # - assets/fonts/
