--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # hive_flutter: 1.1.0
   path_provider: 2.0.3
   cupertino_icons: ^1.0.2
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
