--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,12 @@ android {
     }
 
     buildTypes {
+
+        // debug { 
+        //     debuggable true
+        //     signingConfig signingConfigs.debug
+        // }
+
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
